Fix basepath issue in github page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <script>
       // window.debugG2Fillet = true;
     </script>
-    <script type="module" defer src="/src/main.ts"></script>
+    <script type="module" defer src="/src/main.tsx"></script>
   </body>
 </html>
