Update meta and svg icons

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/joystick.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Fightstick Enclosure Generator</title>
+    <meta name="title" content="Fightstick Enclosure Generator - Open Source Fightstick Customization Tool">
+    <meta name="description" content="FEG is an open-source web application that allows gamers to customize fightstick layouts. It encourages exploration and sharing of custom layouts within the gaming community. FEG focuses on easy manufacturing, with case designs optimized for laser-cut acrylic.">
+    <meta name="keywords" content="Fightstick, Enclosure, Generator, FEG, Open Source, Gaming, Customization, Layout, Manufacturing, Laser-cut Acrylic">
   </head>
   <body>
     <div id="app"></div>
-    <script>
-      // window.debugG2Fillet = true;
-    </script>
     <script type="module" defer src="/src/main.tsx"></script>
   </body>
 </html>
