--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" defer src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
